# j4rs-sanitizer-example

./: Cargo.toml  README.md
examples/: init_jvm.rs  init_naive_jvm.rs  test.rs
src/: lib.rs  run_java.rs
