[package]
name = "j4rs_sanitizer_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = { git = "https://github.com/astonbitecode/j4rs.git", features = ["no-runtime-libloading"] }
# j4rs = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]
name = "j4rs_sanitizer_example"

[dev-dependencies]
env_logger = "0.9"
